client/scss/chatWindow.scss
#chat-window-header {
  display: flex;
  flex-direction: column;

  nav {
    position: relative;
    width: 100%;
    background: #70774b;

    .chat-menu {
      justify-content: space-between;
      align-items: flex-start;
      padding: 0.5rem 0.5rem 0;
      color: white;

      .back-to-profile {
        margin-left: 0.5rem;
        font-size: 0.75rem;
      }

      .corresponding-user-info {
        padding: 0 2rem;
        display: flex;
        flex-direction: row;

        .chat-window-avatar {
          width: 3.5rem;
          height: 3.5rem;
          border-radius: 100%;
          padding: 0.5rem;
        }

        .corresponding-user-info {
          padding: 1rem;
          display: flex;
          justify-content: center;

          .chat-window-avatar {
            width: 3.5rem;
            height: 3.5rem;
            border-radius: 100%;
            padding: 0.5rem;
          }

          .chat-correspondent-name {
            margin-top: 2rem;
            font-size: 1rem;
            color: white;
            text-shadow: 2px 2px 2px #555;
            font-weight: 700;
          }
        }
      }
    }

    .wave-spacer {
      position: absolute;
      z-index: -1;
      width: 100%;
      padding-top: 1.25rem;
      background: #70774b;
    }

    .chat-wave {
      position: absolute;
      width: 100%;
    }
  }

  header {
    display: flex;
    flex-direction: column;
    align-items: center;

    h3 {
      align-self: flex-start;
      color: white;
      text-shadow: 2px 2px 2px #555;
      margin: 0.25rem 0.75rem 0.25rem;
    }
    .message-title {
      font-weight: 500;
      font-size: 0.875rem;
      font-style: italic;
      color: white;
      border-radius: 1rem;
      margin: 0 1rem;
    }
  }

  #message-area-container {
    margin-top: 3.5rem;

    .messagesArea {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      ul {
        list-style: none;
        padding: 0;
        width: 100%;
        margin-bottom: 3rem;
        max-width: 40rem;
        display: flex;
        flex-direction: column;
      }
    }
  }
}

.ind-message-container {
  display: flex;
  flex-direction: column;
  width: 75%;
  margin: 0.5rem 1rem;
  border-radius: 4px;

  &.sender {
    background-color: #e0bfbf;
    align-self: flex-end;
  }

  &.receiver {
    background-color: #ccc;
    align-self: flex-start;
  }
  li {
    display: flex;
    align-items: stretch;
    .message-area-avatar {
      width: 2.5rem;
      height: 2.5rem;
      border-radius: 100%;
      padding: 1rem;
    }

    .message-details {
      padding: 1rem 0.5rem 1rem;
      .username {
        font-weight: 600;
        font-size: 0.875rem;
      }

      .message-text {
        padding: 0.25rem 0;
      }

      .message-timestamp {
        color: #555;
        justify-self: flex-end;
      }
    }
  }
}
.newMessageForm {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;

  form {
    display: grid;
    grid-template-columns: 1fr auto;
    padding: 0.25rem 0.5rem;
    align-items: center;
    background-color: #e0d1b5;

    .message-textfield {
      height: 2rem;
      margin-right: 0.25rem;
      padding: 0.125rem 0.75rem;
      border: none;
      border-radius: 8px;
      font-size: 1rem;

      &::placeholder {
        font-size: 1rem;
        font-style: italic;
      }
    }

    .submit-message {
      display: flex;
      justify-content: space-evenly;
      align-items: center;
      height: 2.3rem;
      border-radius: 8px;
      font-weight: 500;
      font-size: 1rem;
      background-color: #4381c1;
      color: #efefef;

      span {
        padding-right: 0.5rem;
      }
    }
  }
}

